--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
     <ul>
     <li> <a href="1-gallery.html">Gallery</a></li>
-    <li> <a href="2-form.html">form</a></li>
+    <li> <a href="2-form.html">Form</a></li>
   </ul>
 
 </body>
