--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -4,15 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Gallery Page</title>
-  <link rel="stylesheet" href="/node_modules/simplelightbox/dist/simple-lightbox.min.css">
-   <link rel="stylesheet" href="./css/1-gallery.css">
-
+  <!-- Add link to your CSS file -->
+  <link rel="stylesheet" href="./css/1-gallery.css">
+  <!-- Import SimpleLightbox and its styles -->
+  <script type="module" src="./js/1-gallery.js" defer></script>
 </head>
 <body>
-
+  <!-- Gallery container -->
   <ul class="gallery"></ul>
-
-  <script type="module" src="./js/1-gallery.js"></script>
 </body>
 </html>
-
