--- a/src/2-form.html
+++ b/src/2-form.html
@@ -20,6 +20,6 @@
   <button type="submit">Надіслати</button>
 </form>
 
-<script src="/js/2-form.js"></script>
+<script src="./js/2-form.js"></script>
 </body>
 </html>
